# docker-python-exemplo

./: .dockerignore  Dockerfile  constraints.txt  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docker_python_exemplo/: __init__.py  app.py
tests/: test_version_file.py
